--- a/ProyectoP3/nbproject/project.properties
+++ b/ProyectoP3/nbproject/project.properties
@@ -29,7 +29,7 @@ dist.jar=${dist.dir}/ProyectoP3.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.jgrapht.jar=C:\\Users\\david\\Downloads\\jgrapht.jar\\jgrapht.jar
+file.reference.jgrapht.jar=C:\\Users\\leaca\\Downloads\\jgrapht.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -58,7 +58,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=application.Application
+main.class=app.cmp.application.Application
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
