Cambios: 1. Controla los siguientes errores, con pantallas de aviso: - No permite que no sean archivos tipo XML - No permite generar XML si alguna de las actividades no tiene relaciones - No permite cargar archivos si alguna de las actividades no tiene relaciones 2. Metodos de crear XML listo y probado 3. Quite el booleano de print

--- a/ProyectoP3/nbproject/private/private.properties
+++ b/ProyectoP3/nbproject/private/private.properties
@@ -1,7 +1,7 @@
 compile.on.save=true
 do.depend=false
 do.jar=true
-file.reference.jgrapht.jar=C:\\Users\\Rachel\\Desktop\\Universidad\\Progra 3\\2018\\Proyecto I\\jgrapht.jar
+file.reference.jgrapht.jar=C:\\Users\\leaca\\Documents\\Universidad\\Progra3\\jar\\jgrapht.jar
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\Rachel\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\leaca\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
