--- a/ProyectoP3/nbproject/project.properties
+++ b/ProyectoP3/nbproject/project.properties
@@ -33,7 +33,8 @@ file.reference.jgrapht.jar=C:\\Users\\leaca\\Downloads\\jgrapht.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.jgrapht.jar}
+    ${file.reference.jgrapht.jar}:\
+    ${libs.GraphuJar.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
